--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Dell\\Documents\\mysql
 file.reference.mysql-connector-java-5.1.48.zip=C:\\Users\\Dell\\Documents\\mysql-connector-java-5.1.48.zip
 file.reference.MySqlJdbcDriver.zip=C:\\Users\\Dell\\Documents\\mysql-connector-java-5.1.48.zip
 file.reference.sqljdbc_8.2.1.0_ptb.zip=C:\\Users\\Dell\\Documents\\sqljdbc_8.2.1.0_ptb.zip
-user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Guilherme Freire\\AppData\\Roaming\\NetBeans\\15\\build.properties
