--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,5 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Dell\\Documents\\mysql-connector-java-5.1.48.zip
-file.reference.mysql-connector-java-5.1.48.zip=C:\\Users\\Dell\\Documents\\mysql-connector-java-5.1.48.zip
-file.reference.MySqlJdbcDriver.zip=C:\\Users\\Dell\\Documents\\mysql-connector-java-5.1.48.zip
-file.reference.sqljdbc_8.2.1.0_ptb.zip=C:\\Users\\Dell\\Documents\\sqljdbc_8.2.1.0_ptb.zip
-user.properties.file=C:\\Users\\Guilherme Freire\\AppData\\Roaming\\NetBeans\\15\\build.properties
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.zip
+file.reference.MySqlJdbcDriver.zip=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.zip
+user.properties.file=C:\\Users\\Ezilard Silva\\AppData\\Roaming\\NetBeans\\15\\build.properties
