--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,22 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ThorAndLoki
 excludes=
 file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.jar
-file.reference.mysql-connector-java-5.1.48.jar-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.jar
-file.reference.mysql-connector-java-5.1.48.zip=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.zip
 file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.zip
 file.reference.MySqlJdbcDriver.zip=C:\\Users\\Guilherme Freire\\Downloads\\MySqlJdbcDriver.zip
-file.reference.sqljdbc_8.2.1.0_ptb.zip=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\sqljdbc_8.2.1.0_ptb.zip
-file.reference.sqljdbc_8.2.1.0_ptb.zip-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\sqljdbc_8.2.1.0_ptb.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.MySqlJdbcDriver.zip}:\
-    ${file.reference.sqljdbc_8.2.1.0_ptb.zip}:\
-    ${file.reference.mysql-connector-java-5.1.48.zip}:\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.48.zip-1}:\
-    ${file.reference.sqljdbc_8.2.1.0_ptb.zip-1}
+    ${file.reference.mysql-connector-java-5.1.48.zip-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
