--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.jar
-file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.zip
-file.reference.MySqlJdbcDriver.zip=C:\\Users\\Ezilard Silva\\Downloads\\mysql-connector-java-5.1.48.zip
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.zip
+file.reference.MySqlJdbcDriver.zip=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\sqljdbc_8.2.1.0_ptb.zip
 user.properties.file=C:\\Users\\Ezilard Silva\\AppData\\Roaming\\NetBeans\\15\\build.properties
