--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,5 +7,5 @@ user.properties.file=C:\\Users\\jpss3\\AppData\\Roaming\\NetBeans\\15\\build.pro
 file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.jar
 file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.zip
 file.reference.MySqlJdbcDriver.zip=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\sqljdbc_8.2.1.0_ptb.zip
-user.properties.file=C:\\Users\\Gabriel\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Guilherme Freire\\AppData\\Roaming\\NetBeans\\15\\build.properties
 
