--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.jar
-file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\mysql-connector-java-5.1.48.zip
-file.reference.MySqlJdbcDriver.zip=C:\\Users\\Guilherme Freire\\Desktop\\Area Antiga\\Area Trabalho Antiga\\sql\\sqljdbc_8.2.1.0_ptb.zip
+file.reference.JMascara1.0.zip=C:\\Users\\Guilherme Freire\\Documents\\NetBeansProjects\\ThorAndLoki\\lib\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Guilherme Freire\\Documents\\NetBeansProjects\\ThorAndLoki\\lib\\sqljdbc_8.2.1.0_ptb.zip
+file.reference.mysql-connector-java-5.1.48.zip-1=C:\\Users\\Guilherme Freire\\Documents\\NetBeansProjects\\ThorAndLoki\\lib\\JMascara1.0.jar
+file.reference.MySqlJdbcDriver.zip=C:\\Users\\Guilherme Freire\\Documents\\NetBeansProjects\\ThorAndLoki\\lib\\mysql-connector-java-5.1.48.zip
 user.properties.file=C:\\Users\\Guilherme Freire\\AppData\\Roaming\\NetBeans\\15\\build.properties
