--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
     ${file.reference.mysql-connector-java-5.1.48.zip-1}:\
     ${file.reference.JMascara1.0.zip}:\
-    ${file.reference.JMascara1.0.jar}
+    ${file.reference.JMascara1.0.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
