--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,7 +86,7 @@ main.class=View.ThorAndLoki
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_19
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
