--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,7 @@ javac.classpath=\
     ${file.reference.JMascara1.0.jar}:\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -93,7 +93,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
